stderr
ChristmasSongTest.java:41: error: ';' expected
                "Two turtle doves and:\n"
                                         ^
1 error
